<resources>
    <string name="app_name">Lottery</string>

    <string name="numbers">
        \t\t\t\t
        (01) (02) (03) (04) (05) (06) (07) (08) (09) (10)
        (11) (12) (13) (14) (15) (16) (17) (18) (19) (20)
        (21) (22) (23) (24) (25) (26) (27) (28) (29) (30)
        (31) (32) (33) (34) (35) (36) (37) (38) (39) (40)
        (41) (42) (43) (44) (45) (46) (47) (48) (49)</string>


    <string name="game_str">
        (01) (02) (03) (04) (05) (06) (07) (08) (09) (10)
        (11) (12) (13) (14) (15) (16) (17) (18) (19) (20)
        (21) (22) (23) (24) (25) (26) (27) (28) (29) (30)
        (31) (32) (33) (34) (35) (36) (37) (38) (39) (40)
        (41) (42) (43) (44) (45) (46) (47) (48) (49)
    </string>

    <string name="number_about">
        \t\t\t\tFrom the above numbers, a player is expected to select a minimum of three or more before results are drawn. a player can select up to 20 numbers.
    </string>
    <string name="precautions">Precautions:</string>
    <string name="next">NEXT</string>
    <string name="game_hint">Please select the game you want to play</string>
    <string name="print">Print</string>
    <string name="button_scan">Scan for devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="pin_pass">PIN  </string>
    <string name="pin_tid">TID  </string>
    <string name="bt_cancel">CANCEL</string>
    <string name="bt_enter">ENTER</string>

    <string name="company_name">SZFP TECHNOLOGY LIMITED</string>
    <string name="company_slogan">EXPERT IN WIRELESS POS TERMINAL FIELD</string>
    <string name="enter_pin"><![CDATA[Please input pin && password]]></string>
    <string name="error_input">Enter the correct parameters</string>
    <string name="please_game_type">Please Select Game Type</string>
    <string name="please_select">PLEASE SELECT</string>
    <string name="please_game_option">Please Select Game Option</string>
    <string name="please_game_odd">Please Select Odd Type</string>
    <string name="please_input_traceno_hint">Please enter TSN</string>
    <string name="not_any_record">No any record</string>

    <string-array name="array_under">
        <item>U3</item>
        <item>U4</item>
        <item>U5</item>
        <item>U6</item>
    </string-array>


    <string-array name="array_game_type">
        <item>NAP</item>
        <item>PERM</item>
        <item>COLUMN</item>
        <item>GROUPING</item>
    </string-array>
    <string-array name="array_game_option">
        <item>100-1</item>
        <item>80-1</item>
        <item>40-1</item>
    </string-array>
    <string-array name="array_game_nap">
        <item>U3</item>
        <item>U4</item>
        <item>U5</item>
        <item>U6</item>
        <item>U7</item>
        <item>U8</item>
        <item>U9</item>
        <item>U10</item>
    </string-array>

    <string name="scan_barcode_title">ZebraScan</string>
    <string name="scan_qrcode_title">qr code Scan</string>
    <string name="scan_allcode_title">Qr code or barcode scanning</string>
    <string name="scan_barcode_hint">The bar code is automatically scanned into the frame</string>
    <string name="scan_qrcode_hint">The bar code is automatically scanned into the frame</string>
    <string name="scan_allcode_hint">The bar code is automatically scanned into the frame</string>


    <string name="title_activity_jump_to">JumpToActivity</string>
    <string name="please_game_nap">Please Game NPA</string>
</resources>
