<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.szfp.pos.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precautions"
                android:textSize="25sp"
                android:textColor="@color/font_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/numbers"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_about"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.szfp.view.button.SelectButton
                android:layout_gravity="right"
                android:id="@+id/et_enter_finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowRadius="10"
                android:hint="@string/next"
                android:padding="9dp"
                app:normalBackgroundColor="@color/login_normal"
                app:normalTextColor="@color/white"
                app:pressedBackgroundColor="@color/login_pass"
                app:pressedTextColor="@color/white"
                android:textSize="@dimen/text_font_8"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_marginTop="@dimen/x50"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="@dimen/text_font_26"/>

        <ImageView
            android:id="@+id/iv_company_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:src="@mipmap/icon_costomer_logo"
            android:scaleType="fitCenter"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_company_slogan"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x56"
            android:text="@string/company_slogan"
            android:textSize="@dimen/text_font_15"/>



    </LinearLayout>

</LinearLayout>
